src/main/resources/static/honeycrisp.css
/* ... */
.template--styleguide .color--magenta-light {
    background-color: #FFEAF6;
}

.template--styleguide .color--magenta-dark {
    background-color: #66013A;
    color: white;
}

.template--styleguide .color--red {
    background-color: #D13F00;
    color: white;
}

.template--styleguide .color--red-light {
    background-color: #FCE3D9;
}

.template--styleguide .color--teal {
    background-color: #008060;
    color: white;
}

.template--styleguide .color--teal-light {
    background-color: #EBFFFA;
}

.template--styleguide .color--teal-dark {
    background-color: #034E46;
    color: white;
}

.template--styleguide .color--yellow {
    background-color: #FFAE00;
}

.template--styleguide .color--yellow-light {
    background-color: #FFF2D1;
}

/* Sidebar Nav */
/* -------------
Color Class Updates
----------------*/
/* -------------
Sidebar
----------------*/
.sidebar {
    position: absolute;
    width: 17em;
    height: 100%;
    visibility: visible;
    -webkit-backface-visibility: hidden;
    float: left;
    display: inline-block;
    vertical-align: top;
}

.sidebar header {
    width: 100%;
    display: block;
    padding: 0.75em 1em;
}

/* .sidebar > a{
  @include transition(all 0.6s ease);

  &:hover{
    @include transition(all 0.6s ease);
  }
} */
/* -------------
Sidebar Nav
----------------*/
.sidebar-nav {
    position: fixed;
    border-right: 2px black solid;
    width: 12em;
    height: 100%;
    padding-bottom: 6em;
    z-index: 9;
    overflow: hidden;
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    background-color: #ffffff;
    left: 0;
}

.sidebar-nav ul {
    list-style: none;
    display: block;
    padding: 0;
    margin: 0;
    line-height: 16px;
}

.sidebar-nav ul li {
    margin-left: 0;
    display: inline-block;
    width: 100%;
    line-height: 16px;
}

.sidebar-nav ul li .section-header {
    display: block;
    background-color: #EBFFEF;
    padding: .75em 1em;
    color: #5F5854;
    width: 100% !important;
    line-height: 16px;
}

.sidebar-nav ul li a, .sidebar-nav ul li .button--link, .sidebar-nav ul li a:active, .sidebar-nav ul li .button--link:active, .sidebar-nav ul li a:hover, .sidebar-nav ul li .button--link:hover, .sidebar-nav ul li a:visited, .sidebar-nav ul li .button--link:visited {
    line-height: 16px;
    text-decoration: none;
}

.sidebar-nav ul li a:active, .sidebar-nav ul li .button--link:active {
    border-right: #008060 2px;
    font-weight: 900;
}

.sidebar-nav ul li a:hover, .sidebar-nav ul li .button--link:hover {
    text-decoration: underline;
}

.sidebar-nav ul li .sidebar__sub-items {
    padding: .05em 1em;
}

.sidebar-nav ul li .sidebar__sub-items li a, .sidebar-nav ul li .sidebar__sub-items li .button--link, .sidebar-nav ul li .sidebar__sub-items li a:active, .sidebar-nav ul li .sidebar__sub-items li .button--link:active, .sidebar-nav ul li .sidebar__sub-items li a:hover, .sidebar-nav ul li .sidebar__sub-items li .button--link:hover, .sidebar-nav ul li .sidebar__sub-items li a:visited, .sidebar-nav ul li .sidebar__sub-items li .button--link:visited {
    color: #121111;
    line-height: 1.2em;
}

.sidebar-nav ul li .sidebar__sub-items li a:active, .sidebar-nav ul li .sidebar__sub-items li .button--link:active {
    /*border-left: 2px solid $color-teal;*/
    font-weight: 700;
}

.sidebar-nav ul li .sidebar__sub-items li a:hover, .sidebar-nav ul li .sidebar__sub-items li .button--link:hover {
    /*border-left: 2px solid $color-teal;*/
    text-decoration: underline;
}

.sidebar-collapse-toggle {
    display: none;
}

/* -------------
Sidebar Nav
----------------*/
.left-sidebar-slab-container {
    margin-left: 11em;
    padding-left: 1em;
}

@media screen and (max-width: 1400px) {
    .sidebar {
        display: none;
    }

    .sidebar-collapse-toggle {
        display: block;
    }

    .left-sidebar-slab-container {
        margin-left: 0;
        padding-left: 0;
        padding-right: 0;
    }
}

@media screen and (min-width: 1401px) {
    .sidebar {
        display: inline-block;
    }

    .sidebar-collapse-toggle {
        display: none;
    }

    .left-sidebar-slab-container {
        margin-left: 11em;
        padding-left: 1em;
    }

    .sidebar-nav {
        width: 12em !important;
    }
}

/* Shame */
.lt-ie10 .select:before {
    display: none;
}

.lt-ie10 .select__element {
    padding-right: .7em;
}

/* SHIBA */
.intro-box {
    padding: 1rem;
    margin: 2.5rem 2rem 2.5rem 2rem;
    border: 2px solid #AAAAAA;
}

.dob-input {
    display: inline-block;
    width: 30%;
}

.bottom-horizontal-line {
    border-bottom: 1px solid black;
}

.icon-check_circle.large {
    color: #CFC5BF;
    font-size: 100px;
}

.form-width--2-character {
    width: calc(5.4rem + 2ch);
}

.form-width--4-character {
    width: calc(5.4rem + 4ch);
}

